<resources>
    <string name="app_name">PinballApp</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="title">Burger\'s Pinball App</string>
    <string name="loginHint">Enter A Username</string>
    <string name="LoginButtonText">Login</string>
    <string name="errMessageLogin">Invalid Login.  Please retry.</string>
    <string name="errMessagePassword">Invalid Password.  Please retry.</string>
    <string name="companyNames">Company:</string>
    <string-array name="companyGroup">
        <item>American Pinball</item>
        <item>Chicago Gaming Company</item>
        <item>Jersey Jack Pinball</item>
        <item>Spooky Pinball</item>
        <item>Stern Pinball</item>
    </string-array>
    <string name="nameMachine">Name of Machine:</string>
    <string name="datePlayed">Date Played: </string>
    <string name="dateHint">Select Day</string>
    <string name="score">Score:</string>
    <string name="rateMachinesbtn">Rate Machines</string>
    <string name="JurassicPark">Jurassic Park</string>
    <string name="StrangerThings">Stranger Things</string>
    <string name="WillyWonka">Willy Wonka</string>
    <string name="HotWheels">Hot Wheels</string>
    <string name="ratingsHeading">Check the machines that you have played and rate them</string>
    <string name="summaryButton">Submit</string>


</resources>
