<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseClass">

    <CheckedTextView
        android:id="@+id/ctv4"
        android:layout_width="383dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/HotWheels"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb3" />

    <RatingBar
        android:id="@+id/rb4"
        android:layout_width="190dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:numStars="4"
        android:stepSize=".5"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctv4" />

    <CheckedTextView
        android:id="@+id/ctv3"
        android:layout_width="383dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/WillyWonka"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb2" />

    <RatingBar
        android:id="@+id/rb3"
        android:layout_width="190dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:numStars="4"
        android:stepSize=".5"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctv3" />

    <CheckedTextView
        android:id="@+id/ctv2"
        android:layout_width="383dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/StrangerThings"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb1" />

    <RatingBar
        android:id="@+id/rb2"
        android:layout_width="190dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:numStars="4"
        android:stepSize=".5"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctv2" />

    <CheckedTextView
        android:id="@+id/ctv1"
        android:layout_width="383dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:checkMark="?android:attr/textCheckMark"
        android:text="@string/JurassicPark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <RatingBar
        android:id="@+id/rb1"
        android:layout_width="190dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:numStars="4"
        android:stepSize=".5"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctv1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="371dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/ratingsHeading"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="32dp"
        android:text="@string/summaryButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb4" />
</androidx.constraintlayout.widget.ConstraintLayout>